<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="30dp">

        <EditText
            android:paddingLeft="7dp"
            android:id="@+id/edtNome"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginRight="7dp"
            android:hint="@string/edtNome"
            android:inputType="text"
            android:background="@drawable/input"/>

        <EditText
            android:paddingLeft="7dp"
            android:id="@+id/edtSobrenome"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginLeft="7dp"
            android:hint="@string/edtSobrenome"
            android:inputType="text"
            android:background="@drawable/input"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <EditText
            android:paddingLeft="7dp"
            android:id="@+id/edtCPF"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginRight="7dp"
            android:hint="@string/edtCPF"
            android:inputType="number"
            android:background="@drawable/input"/>


        <EditText
            android:paddingLeft="7dp"
            android:id="@+id/edtSenha"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginLeft="7dp"
            android:hint="@string/editSenha"
            android:inputType="textPassword"
            android:background="@drawable/input"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <EditText
            android:paddingLeft="7dp"
            android:id="@+id/edtEmail"
            android:layout_width="294dp"
            android:layout_height="45dp"
            android:hint="@string/edtEmail"
            android:inputType="textEmailAddress"
            android:background="@drawable/input"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:onClick="Entrar"
            android:text="@string/btnEntrar"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>